Version 2.2.1 - Changed List.of to Arrays.asList